# quant-sim

./: .gitignore  README.md  render.yaml
.claude/: launch.json
backend/: .env.example  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: backtest.py  dashboard.py  data.py  leaderboard.py  optimize.py  paper.py  strategy.py
backend/app/data/: cache.py  yf_client.py
backend/app/engine/: analytics.py  backtester.py  metrics.py
backend/app/llm/: client.py  prompts.py
backend/app/optimize/: portfolio_opt.py
backend/app/paper/: broker.py  scheduler.py
backend/app/sandbox/: ast_guard.py  runner.py
backend/app/store/: db.py  models.py
backend/app/strategies/: base.py
backend/app/strategies/builtins/: __init__.py  momentum.py  rsi_mean_rev.py  sma_cross.py
backend/tests/: test_sandbox.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: CodeEditor.tsx  KPI.tsx  Plot.tsx
frontend/src/components/charts/: CandleChart.tsx  DrawdownChart.tsx  EquityChart.tsx  FrontierChart.tsx  MonteCarloChart.tsx  MonthlyHeatmap.tsx  WeightBars.tsx
frontend/src/lib/: api.ts  celebrate.ts  format.ts  theme.tsx
frontend/src/pages/: Backtest.tsx  Dashboard.tsx  DataExplorer.tsx  Leaderboard.tsx  Optimize.tsx  PaperTrade.tsx  StrategyStudio.tsx
