[project]
name = "xlb-backend"
version = "0.1.0"
description = "Xiao Long Bao — quant playground backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "yfinance>=0.2.40",
  "pandas>=2.1",
  "numpy>=1.26",
  "pyarrow>=15",
  "PyPortfolioOpt>=1.5.5",
  "apscheduler>=3.10",
  "openai>=1.50",
  "RestrictedPython>=7.1",
  "python-multipart>=0.0.9",
  "websockets>=12",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
